<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentRoomActivity"
	android:background="@color/bac_color">

        <ScrollView
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:fillViewport="true"
		    android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
		    android:scrollbars="none">
		    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:orientation="vertical" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_marginTop="20dp" >
	            
	             <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="wrap_content"
	                 android:gravity="center"
	                 android:text="@string/welcome_text2"
	                 android:textColor="@color/black"
	                 android:textSize="23dp" />
	            
	            <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="wrap_content"
	                 android:gravity="center"
	                 android:layout_marginTop="20dp"
	                 android:textColor="@color/black"
	                 android:text="@string/welcome_text3"
	                 android:textSize="15dp" />
	           
	        </LinearLayout>
	
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="200dp"
	            android:layout_marginTop="10dp"
	            android:src="@drawable/help" />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.77"
	            android:orientation="vertical">
	             
	            <TextView
	                 android:layout_width="match_parent"
	                 android:layout_height="wrap_content"
	                 android:gravity="center"
	                 android:layout_marginTop="20dp"
	                 android:textColor="@color/black"
	                 android:text="@string/welcome_text4"
	                 android:textSize="15dp" />
	            
	            <Button
	                 android:id="@+id/btn_ok"
	                 android:layout_width="fill_parent"
	                 android:layout_height="wrap_content"
	                 android:layout_marginTop="20dp"
	                 android:text="OK"
	                 android:layout_marginLeft="30dp"
	                 android:layout_marginRight="30dp"
	                 android:textSize="20sp"
	                 android:textColor="@color/white"
	                 android:paddingTop="15dp"
	                 android:paddingBottom="15dp"
	                 android:layout_marginBottom="20dp"
	                 android:background="@drawable/button_curve_deepblue" />
	             
		    </LinearLayout>
	    </LinearLayout>
    </ScrollView>
</RelativeLayout>